# cloc-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
cloc_python/: __init__.py  __main__.py
tests/: test_integration.py
tests/fixtures/: .gitkeep  test.js  test.py  test_by_file.py
