[project]
name = "cloc-python"
version = "0.1.0"
description = "UVX-friendly wrapper for cloc (Count Lines of Code) binary executable"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = []
keywords = ["cloc", "lines of code", "code counter", "sloc", "loc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/cloc-python"
Repository = "https://github.com/YOUR_USERNAME/cloc-python"
Issues = "https://github.com/YOUR_USERNAME/cloc-python/issues"

[project.scripts]
cloc-python = "cloc_python:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pre-commit>=3.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["cloc_python"]
include = ["cloc_python/**"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
